--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+      <meta charset="UTF-8">
        <title>Cassie Triche</title>
+       <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
