--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang='en'>
     <head>
         <meta charset="UTF-8">
-       <title>Cassie Triche</title>
+       <title>Hello, I am Cassie Triche</title>
        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>Hello I am Cassie Triche
+
+        </h1>
+        
+        <img style="border-radius: 50%; float: right; margin-right: 1em;" src="https://www.gravatar.com/avatar/4678a33bf44c38e54a58745033b4d5c6?d=mm&s=64" alt="Cassie Triche">
+        <p>I am an IT Professional With 6 Years Experience Specializing In Networking, Computer And Data Support, And QA Testing. I am an aspiring DevOps Engineer. I am ambitious and career driven. I am a life-long learner.</p>
         <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
@@ -13,5 +19,6 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
+          <img style="border-radius: 50%; float: right; margin-right: 1em;">
     </body>
 </html>
