--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
-          <form action="https://formspree.io/cassietriche@comcast.net" method="POST"></form>
+          <form action="https://formspree.io/cassietriche@comcast.net" method="POST">
           <div>
             <input type="hidden" name="_subject" value="New submission!">
           </div>
