--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,12 @@
           <div>
             <input type="submit" value="Send">
           </div>
+          <div>
           <input type="hidden" name="_next" value="//techmommy2410.github.io/thanks.html">
+          </div>
+          <div>
           <input type="text" name="_gotcha" style="display:none">
-
+            </div>
         </form>
     </body>
 </html>
