--- a/resume.html
+++ b/resume.html
@@ -13,5 +13,12 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
+          <h1>Cassie Triche</h1>
+<div>
+  <a href="https://www.linkedin.com/in/ctriche/" target="_blank" rel="noopener">LinkedIn</a>
+  <a href="https://techmommy2410.github.io/" target="_blank" rel="noopener">GitHub</a>
+  &#x25CF;
+  Richton Park, IL
+</div>
     </body>
 </html>
