Edit Github link

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
           <h1>Cassie Triche</h1>
 <div>
   <a href="https://www.linkedin.com/in/ctriche/" target="_blank" rel="noopener">LinkedIn</a>
-  <a href="https://techmommy2410.github.io/" target="_blank" rel="noopener">GitHub</a>
+  <a href="//techmommy2410.github.io/" target="_blank" rel="noopener">GitHub</a>
   &#x25CF;
   Richton Park, IL
 </div>
