--- a/resume.html
+++ b/resume.html
@@ -14,11 +14,15 @@
             </ul>
           </nav>
           <h1>Cassie Triche</h1>
-<div>
-  <a href="https://www.linkedin.com/in/ctriche/" target="_blank" rel="noopener">LinkedIn</a>
+         <div>
+          <a href="https://www.linkedin.com/in/ctriche/" target="_blank" rel="noopener">LinkedIn</a>
   <a href="https://github.com/techmommy2410" target="_blank" rel="noopener">GitHub</a>
-  &#x25CF;
-  Richton Park, IL
-</div>
+ </div>
+          <h2><pre>Richton Park, IL
+
+              Full Stack Web and Hybrid Mobile Applications Developer
+          </pre></h2>
+          <p>Full stack web and hybrid mobile applications developer specializing in full stack JavaScript application and architectures. Experienced in all stages of the development life cycle, well versed in numerous programming languages.</p>
+
     </body>
 </html>
