--- a/Thanks.html
+++ b/Thanks.html
@@ -3,16 +3,29 @@
     <head>
       <meta charset="UTF-8">
        <title>Thank You</title>
+
+       <link rel="stylesheet" type="text/css" href="./dist/css/main.css">
+       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      
+
+       <main>
        <h2>Thanks For Contacting Me.</h2>
+       </main>
+
        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <nav>
+        <header>
+          <span class="logo">My WebSite</span>
+          <a id="toggleMenu">Menu<a></a>
+        
+          <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="resume.html">Resume</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
+        </header>
     </body>
 </html>
