Adding to resume

--- a/resume.html
+++ b/resume.html
@@ -38,5 +38,21 @@
           </pre></h2>
           <p>Full stack web and hybrid mobile applications developer specializing in full stack JavaScript application and architectures. Experienced in all stages of the development life cycle, well versed in numerous programming languages.</p>
 
-    </body>
+          <ul>
+            <li>Hands-on experience leading all stages of system development efforts, including requirements in
+                    definition design, architecture, testing and support.</li>
+            <li>Outstanding leadership abilities; able to coordinate and direct all phases of project-based efforts.</li>
+        </ul>
+
+        <h3>Core Competencies</h3>
+
+        <ul>
+            <li>Full Stack Development</li>
+            <li>Front End Development</li>
+            <li>Cisco Certified Network Administrator</li>
+        </section>
+
+        
+               
+</body>
 </html>
